added andpoint for editing username
